- Eliminação de duplicação (validação normalize+throw, WorkOrderPart/WorkOrderService, mensagens de erro repetidas no GlobalExceptionHandler) - Nomes que revelam intenção (campos de repositório e de service em vez de repository/service genéricos) - Métodos longos quebrados em passos nomeados (ServiceOrderApplicationService.create) - Consistência de estilo (imports explícitos em vez de wildcard, pacotes de teste espelhando main) - Código morto e ruído removidos (import não usado, linhas em branco soltas, customizer vazio).